# everybody-codes

./: .gitignore  Cargo.toml  README.md
src/: cardinals.rs  coord.rs  get_numbers.rs  indexer.rs  inputs.rs  lib.rs  stopwatch.rs
