[package]
name = "everybody-codes"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
itertools = "0.13.0"
num-traits = "0.2.19"

[[bin]]
name = "y24d01"
path = "src/bin/2024/y24d01.rs"

[[bin]]
name = "y24d02"
path = "src/bin/2024/y24d02.rs"

[[bin]]
name = "y24d03"
path = "src/bin/2024/y24d03.rs"

[[bin]]
name = "y24d04"
path = "src/bin/2024/y24d04.rs"

[[bin]]
name = "y24d05"
path = "src/bin/2024/y24d05.rs"